# Pedestrian

./: .gitmodules  README.md
DarknetDetector/: .gitignore  L2.qrc  detector.pro  framereader.cpp  framereader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qrc  style.qss  timer.h  yolo-tiny.cfg
DarknetDetector/darknet/: activation_layer.cpp  activations.h  avgpool_layer.cpp  avgpool_layer.h  batchnorm_layer.cpp  box.cpp  connected_layer.cpp  convolutional_layer.cpp  cost_layer.cpp  cost_layer.h  crnn_layer.cpp  crop_layer.cpp  cuda.cpp  darknet.cpp  data.cpp  data.h  deconvolutional_layer.cpp  demo.cpp  demo.h  detection_layer.cpp  dropout_layer.cpp  gemm.cpp  gru_layer.cpp  image.cpp  image.h  list.cpp  local_layer.cpp  matrix.cpp  maxpool_layer.cpp  network.cpp  network.h  normalization_layer.cpp  option_list.cpp  option_list.h  parser.cpp  parser.h  rnn_layer.cpp  rnn_vid.cpp  route_layer.cpp  shortcut_layer.cpp  (+7 more)
DarknetTrainer/: CMakeLists.txt  README.md
DarknetTrainer/cfg/: cpuNet-3c.cfg  tiny-yolo-3c.cfg  yolo-tiny-1c.cfg  yolo-tiny-4c.cfg
DarknetTrainer/cmake/: CudaComputeTargetFlags.cmake
DarknetTrainer/src/: coco.c  constants.h  darknet.c  data.c  demo.c  detection_layer.c  image.c  yolo.c  yolo_demo.c  yolo_kernels.cu
Evaluation/annotation_tool/: CMakeLists.txt  opencv_annotation.cpp
Evaluation/evaluation_tool/: evaluation_tool.py
Evaluation/extract_bboxes/: CMakeLists.txt
Evaluation/extract_bboxes/cfg/: cpuNet-1c.cfg  cpuNet-4c.cfg  cpuNet.cfg
Evaluation/extract_bboxes/data/: CMakeLists.txt
Evaluation/extract_bboxes/data/src/: darknet.c  darknet_wrapper.c  demo.c  detection_layer.c  image.c  image.h  parser.c  yolo.c  yolo_demo.cpp
Evaluation/extract_bboxes/src/: constants.h  darknet_wrapper.c  darknet_wrapper.h  image.c  image.h  parser.c  yolo_demo.cpp  yolo_kernels.cu
Scripts/: converter.py
